Fix alignment of options in experience section

--- a/front/style/pages/_cv.scss
+++ b/front/style/pages/_cv.scss
@@ -149,7 +149,9 @@
         }
     }
 
-    &__training--options {
+    &__training--options,
+    &__experience--options
+     {
         margin-top: 10px;
 
         > a {
